Fixing the overlap of username and flash messages

--- a/public/css/billbo.css
+++ b/public/css/billbo.css
@@ -66,3 +66,8 @@ a.label {
 .title a {
   color: #000;
 }
+
+.auth-row {
+  margin: 15px;
+}
+
